Fix search button alignment: move margin-top from input to form container

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -1048,6 +1048,7 @@ div.help p {
 
 #bigheadcontainer form {
   display: block;
+  margin-top: 0.5em;
 }
 #bigheadcontainer form > div {
   display: flex;
